# purpl-engine_old3

./: .clang-format  .gitignore  .gitmodules  .replit  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE.md  README.md  make_embeddable.sh  purpl-engine.code-workspace  test.txt
demo/: CMakeLists.txt  main.c
demo/embed/: --format  app.json  app_linux.json  app_win32.json  ffmpeg.txt  test.txt
include/: CMakeLists.txt
include/purpl/: app_info.h  asset.h  inst.h  log.h  macro.h  purpl.h  types.h  util.h  window.h
scripts/: createheader.py
src/: CMakeLists.txt  app_info.c  asset.c  inst.c  log.c  stb.c  util.c
tools/: CMakeLists.txt  README.md  mkembed.c
