cmake_minimum_required(VERSION 3.10)

set(PURPL_DEMO_EMBED_BASENAME embed)
set(PURPL_DEMO_EMBED_FOLDER ${CMAKE_CURRENT_LIST_DIR}/${PURPL_DEMO_EMBED_BASENAME})
set(PURPL_DEMO_EMBED_ARCHIVE ${CMAKE_CURRENT_BINARY_DIR}/${PURPL_DEMO_EMBED_BASENAME}.tar)

# This is an example of a CMake-integrated way of creating a C source file from a set of files
file(GLOB_RECURSE PURPL_DEMO_EMBED_ORIG_FILES FOLLOW_SYMLINKS LIST_DIRECTORIES false "${PURPL_DEMO_EMBED_FOLDER}/*")
message(STATUS "${PURPL_DEMO_EMBED_ORIG_FILES}")
foreach(CURRENT ${PURPL_DEMO_EMBED_ORIG_FILES})
	string(FIND ${CURRENT} "embed" OCC REVERSE)
	string(SUBSTRING ${CURRENT} ${OCC} -1 FIXED)
	message(STATUS "${FIXED}")
	set(PURPL_DEMO_EMBED_FILES "${PURPL_DEMO_EMBED_FILES}${FIXED};")
endforeach()
add_custom_command(OUTPUT ${PURPL_DEMO_EMBED_ARCHIVE}
				   COMMAND ${CMAKE_COMMAND} -E tar cvf ${PURPL_DEMO_EMBED_ARCHIVE} ${PURPL_DEMO_EMBED_FILES}
				   WORKING_DIRECTORY ${PURPL_DEMO_EMBED_FOLDER}/..
				   VERBATIM
				   USES_TERMINAL
)
add_custom_target(embed_src
		  COMMAND $<TARGET_FILE:mkembed> ${PURPL_DEMO_EMBED_ARCHIVE} ${PURPL_DEMO_EMBED_BASENAME} ${CMAKE_CURRENT_BINARY_DIR}/${PURPL_DEMO_EMBED_BASENAME}.c
		  DEPENDS mkembed ${PURPL_DEMO_EMBED_BASENAME} ${PURPL_DEMO_EMBED_ARCHIVE}
		  BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/${PURPL_DEMO_EMBED_BASENAME}.c ${PURPL_DEMO_EMBED_ARCHIVE}
		  VERBATIM
		  USES_TERMINAL
)

set(PURPL_DEMO_HEADERS)
set(PURPL_DEMO_SOURCES
	main.c
	${CMAKE_CURRENT_BINARY_DIR}/${PURPL_DEMO_EMBED_BASENAME}.c
)

add_executable(purpl-demo ${PURPL_DEMO_HEADERS} ${PURPL_DEMO_SOURCES})
target_link_libraries(purpl-demo purpl)
